syntax = "proto3";

package protobuf;

option go_package="pb/";

service Scheduler {
  rpc ScheduleImageBuild (ScheduleImageBuildRequest) returns (ScheduleImageBuildResponse) {}
  rpc ScheduleWorkload (ScheduleWorkloadRequest) returns (ScheduleWorkloadResponse) {}
}

message ScheduleImageBuildRequest {
  string workload_id  = 1;
  string git_repo_url = 2;
}

message ScheduleImageBuildResponse {
  string job_name = 1;
  string image_name = 2;
  string error = 3;
}

message ScheduleWorkloadRequest {
  message EnvVar {
    string key = 1;
    string value = 2;
  }

  repeated EnvVar envs = 1;
  string image_name = 2;

}

message ScheduleWorkloadResponse {

}